Made 840px+-wide viewports render events at min-width of 400px rather than 300px to prevent a cramped event grid on full-screen browsers

--- a/animesocsite/static/style.css
+++ b/animesocsite/static/style.css
@@ -238,6 +238,12 @@ a {
     font-size: 5vw;
 }
 
+@media screen and (min-width: 840px) {
+    .eventsdisplay {
+        grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+    }
+}
+
 @media screen and (min-width: 630px) {
     .eventTitle {
         font-size: 40px;
